--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hook-form": "^7.17.2",
@@ -32,6 +34,7 @@
     "react-scripts": "^4.0.3",
     "sass": "^1.42.1",
     "styled-components": "^5.3.1",
+    "tailwindcss": "^2.2.16",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
