--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^10.3.7",
+    "google-maps-react": "^2.0.6",
     "postcss": "^8.3.9",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
