--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/draft-js": "^0.11.6",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-draft-wysiwyg": "^1.13.3",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^10.3.7",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "google-maps-react": "^2.0.6",
     "postcss": "^8.3.9",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-hook-form": "^7.17.2",
     "react-modal": "^3.14.3",
     "react-modern-drawer": "^0.1.1",
